--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h4>OUR HOLIDAY DEALS ARE BETTER</h4>
           <h2>ALL CATEGORIES</h2>
         </div>
-        <img src="images/resources/New Year Photo.png" alt="" />
+        <img src="images/New Year Photo.png" alt="" />
       </section>
       <!-- midnight party info and image -->
       <section class="midnight-party">
@@ -36,7 +36,7 @@
           <button class="midnight-party-btn">JOIN NOW</button>
         </div>
         <div class="new-year-2024">
-          <img src="images/resources/Group 70.png" alt="" />
+          <img src="images/Group 70.png" alt="" />
         </div>
       </section>
       <!-- place,date,time info -->
@@ -65,7 +65,7 @@
             </p>
           </div>
           <div class="ellipse">
-            <img src="images/resources/Ellipse 1.png" alt="" />
+            <img src="images/Ellipse 1.png" alt="" />
           </div>
           <div class="new-best-offer-description">
             <h1>2024</h1>
@@ -74,7 +74,7 @@
               <br />
               maecenas sed.
             </p>
-            <img src="images/resources/Group 96.png" alt="" />
+            <img src="images/Group 96.png" alt="" />
           </div>
         </div>
       </section>
@@ -93,19 +93,19 @@
             <div class="discount-image">
               <img
                 class="group-44"
-                src="images/resources/Group 44.png"
+                src="images/Group 44.png"
                 alt=""
               />
               <img
                 class="rectangle-1"
-                src="images/resources/Rectangle 1.png"
+                src="images/Rectangle 1.png"
                 alt=""
               />
             </div>
-            <img class="group-75" src="images/resources/Group 75.png" alt="" />
+            <img class="group-75" src="images/Group 75.png" alt="" />
             <img
               class="rectangle-2"
-              src="images/resources/Rectangle 2.png"
+              src="images/Rectangle 2.png"
               alt=""
             />
           </div>
@@ -122,14 +122,14 @@
         </div>
         <div>
           <div class="product-img">
-            <img class="hvimage" src="images/resources/Rectangle 3.png" alt="" />
-            <img class="hvimage"  src="images/resources/Rectangle 4.png" alt="" />
-            <img class="hvimage" src="images/resources/Rectangle 5.png" alt="" />
+            <img class="hvimage" src="images/Rectangle 3.png" alt="" />
+            <img class="hvimage"  src="images/Rectangle 4.png" alt="" />
+            <img class="hvimage" src="images/Rectangle 5.png" alt="" />
           </div>
           <div class="product-img">
-            <img class="hvimage" src="images/resources/Rectangle 6.png" alt="" />
-            <img class="hvimage" src="images/resources/Rectangle 7.png" alt="" />
-            <img class="hvimage" src="images/resources/Rectangle 8.png" alt="" />
+            <img class="hvimage" src="images/Rectangle 6.png" alt="" />
+            <img class="hvimage" src="images/Rectangle 7.png" alt="" />
+            <img class="hvimage" src="images/Rectangle 8.png" alt="" />
           </div>
         </div>
       </section>
@@ -137,7 +137,7 @@
       <section>
         <div class="subscribe">
           <div class="group61">
-            <img src="images/resources/Group 61.png" alt="" />
+            <img src="images/Group 61.png" alt="" />
           </div>
           <div class="subscribe-description">
             <h1 class="subscribe-title">Subscribe Newsletter</h1>
@@ -170,10 +170,10 @@
       </div>
       <hr />
       <div class="footer-icon">
-        <img src="images/resources/Facebook.png" alt="" />
-        <img src="images/resources/Instagram.png" alt="" />
-        <img src="images/resources/Twitter.png" alt="" />
-        <img src="images/resources/Linkedin.png" alt="" />
+        <img src="images/Facebook.png" alt="" />
+        <img src="images/Instagram.png" alt="" />
+        <img src="images/Twitter.png" alt="" />
+        <img src="images/Linkedin.png" alt="" />
       </div>
       <hr />
       <div class="footer-description">
