--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- heading info -->
-    <header class="container">
-      <section class="banner-title">
-        <div>
+    <header >
+      <section class="container" >
+        <div class="banner-title">
           <h3>Happy New Year</h3>
           <h1>New Year Party <br />Celebration</h1>
         </div>
