--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
   <body>
     <!-- heading info -->
     <header >
-      <section class="container" >
+      <!-- <section class="container">
+        <div class="banner-img">
+          <img src="images/Banner Image.png" alt="">
+        </div>
         <div class="banner-title">
           <h3>Happy New Year</h3>
           <h1>New Year Party <br />Celebration</h1>
         </div>
-      </section>
+      </section> -->
+
+      <div class="banner-title">
+        <h3>Happy New Year</h3>
+        <h1>New Year Party Celebration</h1>
+      </div>
+
     </header>
     <main>
       <!-- discount part -->
