--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- heading info -->
-    <header >
+    <header class="header" >
       <!-- <section class="container">
         <div class="banner-img">
           <img src="images/Banner Image.png" alt="">
